@@ -335,6 +335,7 @@ void bind_torrent_handle()
         .def("file_priorities", &file_priorities)
         .def("use_interface", &torrent_handle::use_interface)
         .def("save_resume_data", _(&torrent_handle::save_resume_data))
+        .def("need_save_resume_data", _(&torrent_handle::need_save_resume_data))
         .def("force_reannounce", _(force_reannounce0))
         .def("force_reannounce", &force_reannounce)
         .def("force_dht_announce", _(&torrent_handle::force_dht_announce))
